--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
-<form method="POST" action="/">
-<label>Kanye</label>
+<form method="GET" action="/results">
+<label>Pick a celeb</label>
 <input name="Celeb" type="text" />
 <button type ="Submit">Add</button>
 </form>
