--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,23 @@
+<h1 style="color: red;">Mish-Mash-Me</h1>
+
+<body style="background-image:linear-gradient(180deg, rgb(248, 248, 17), rgba(174, 58, 209, 0.746)); height:1000px">
+
+
+<p>Choose your celebrity:</p>
+
+<ul>
+  <li> Kanye </li>
+  <li> Borat </li>
+  <li> Lisa</li>
+  <li> Arnold</li>
+  <li> Barney</li>
+  <li> Bowie</li>
+</ul>
+
 <form method="GET" action="/results">
 <label>Pick a celeb</label>
 <input name="Celeb" type="text" />
 <button type ="Submit">Add</button>
 </form>
+
+
