--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,3 +1,8 @@
+<h1 style="color: red;">Mish-Mash-Me</h1>
+
+<body style="background-image:linear-gradient(180deg, rgb(248, 248, 17), rgba(174, 58, 209, 0.746)); height:1000px">
+
+
 <h1>{{name}}</h1>
 
 <img src="{{image1}}" alt="Yee">
