--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-<h1 style="color: red;">Mish-Mash-Me</h1>
+<h1 style="color: red;">Mish-Mash-YE</h1>
 
 <body style="background-image:linear-gradient(180deg, rgb(248, 248, 17), rgba(174, 58, 209, 0.746)); height:1000px">
 
